--- a/gui.ui
+++ b/gui.ui
@@ -8,7 +8,7 @@
     <x>0</x>
     <y>0</y>
     <width>812</width>
-    <height>774</height>
+    <height>825</height>
    </rect>
   </property>
   <property name="font">
@@ -256,7 +256,7 @@
              <x>0</x>
              <y>0</y>
              <width>786</width>
-             <height>650</height>
+             <height>701</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout">
@@ -461,7 +461,7 @@
              </widget>
             </item>
             <item>
-             <spacer name="verticalSpacer_2">
+             <spacer name="verticalSpacer">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
               </property>
@@ -528,6 +528,27 @@
                 </layout>
                </item>
                <item>
+                <layout class="QHBoxLayout" name="horizontalLayout_18">
+                 <item>
+                  <widget class="QCheckBox" name="cb_saturation_enabled">
+                   <property name="text">
+                    <string>Color (saturation):</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QSpinBox" name="sb_saturation">
+                   <property name="minimum">
+                    <number>-100</number>
+                   </property>
+                   <property name="maximum">
+                    <number>1000</number>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </item>
+               <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_19">
                  <item>
                   <widget class="QCheckBox" name="cb_sharpness_enabled">
@@ -549,19 +570,16 @@
                 </layout>
                </item>
                <item>
-                <layout class="QHBoxLayout" name="horizontalLayout_18">
+                <layout class="QHBoxLayout" name="horizontalLayout_21">
                  <item>
-                  <widget class="QCheckBox" name="cb_saturation_enabled">
+                  <widget class="QCheckBox" name="cb_vignette_enabled">
                    <property name="text">
-                    <string>Color (saturation):</string>
+                    <string>Vignetting:</string>
                    </property>
                   </widget>
                  </item>
                  <item>
-                  <widget class="QSpinBox" name="sb_saturation">
-                   <property name="minimum">
-                    <number>-100</number>
-                   </property>
+                  <widget class="QSpinBox" name="sb_vignette">
                    <property name="maximum">
                     <number>1000</number>
                    </property>
@@ -591,7 +609,7 @@
              </widget>
             </item>
             <item>
-             <spacer name="verticalSpacer">
+             <spacer name="verticalSpacer_2">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
               </property>
@@ -884,10 +902,10 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup_4"/>
-  <buttongroup name="buttonGroup_3"/>
   <buttongroup name="buttonGroup_2"/>
+  <buttongroup name="buttonGroup_3"/>
   <buttongroup name="buttonGroup"/>
   <buttongroup name="buttonGroup_5"/>
+  <buttongroup name="buttonGroup_4"/>
  </buttongroups>
 </ui>
